--- a/devjobs-web-app/src/styles/global.css
+++ b/devjobs-web-app/src/styles/global.css
@@ -22,3 +22,18 @@ button {
   margin: 0;
   cursor: pointer;
 }
+
+svg {
+  pointer-events: none;
+}
+
+label {
+  pointer-events: none;
+  opacity: 0;
+  position: absolute;
+}
+
+input {
+  border: none;
+  padding: 12px;
+}
